fixed code view on mobile and typing error

--- a/src/styles/_landing.scss
+++ b/src/styles/_landing.scss
@@ -11,7 +11,7 @@
     margin-bottom: 140px;
 
     .title {
-      font-size: 40px;
+      font-size: 30px;
       margin-bottom: 50px;
     }
 
