--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,9 @@ html, body {
 
 pre {
   background-color: #f1f1f1;
+  overflow: auto;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 $colors: (
